--- a/assets/stylesheets/screen.css
+++ b/assets/stylesheets/screen.css
@@ -2619,7 +2619,7 @@ table th[class*="span"],
   *margin-right: .3em;
   line-height: 14px;
   vertical-align: text-top;
-  background-image: url('../images/glyphicons-halflings.png?1407439834');
+  background-image: url('../images/glyphicons-halflings.png?1411151587');
   background-position: 14px 14px;
   background-repeat: no-repeat;
   margin-top: 1px;
@@ -2644,7 +2644,7 @@ table th[class*="span"],
 .dropdown-submenu:focus > a > [class^="icon-"],
 .dropdown-submenu:hover > a > [class*=" icon-"],
 .dropdown-submenu:focus > a > [class*=" icon-"] {
-  background-image: url('../images/glyphicons-halflings-white.png?1407439834');
+  background-image: url('../images/glyphicons-halflings-white.png?1411151587');
 }
 
 /* line 52, ../../../../../../../../lib/gems/1.8/gems/compass_twitter_bootstrap-2.3.1/stylesheets/compass_twitter_bootstrap/_sprites.scss */
@@ -9951,7 +9951,7 @@ select[size] {
 
 /* line 70, ../../../../../../../../lib/gems/1.8/gems/compass_radix-2.0.0/stylesheets/compass_radix/_form.scss */
 html.js input.form-autocomplete {
-  background: url('../images/throbber.gif?1407439834') no-repeat right 8px white !important;
+  background: url('../images/throbber.gif?1411151587') no-repeat right 8px white !important;
 }
 
 /* line 73, ../../../../../../../../lib/gems/1.8/gems/compass_radix-2.0.0/stylesheets/compass_radix/_form.scss */
@@ -12754,70 +12754,94 @@ table.table td, table.table th {
 table th.checkbox {
   padding: 8px;
 }
+/* line 6, ../sass/partials/_table.sass */
+table th.checkbox input[type="checkbox"] {
+  margin: 0.5em auto !important;
+  float: none;
+}
 @media only screen and (max-width: 800px) {
-  /* line 7, ../sass/partials/_table.sass */
+  /* line 10, ../sass/partials/_table.sass */
   table thead th {
     font-size: 12px;
     padding-left: 5px;
     padding-right: 5px;
   }
 }
-/* line 11, ../sass/partials/_table.sass */
+/* line 14, ../sass/partials/_table.sass */
 table .tabledrag-handle {
   width: 8%;
   min-width: 25px;
 }
-/* line 15, ../sass/partials/_table.sass */
+/* line 18, ../sass/partials/_table.sass */
 table .image-widget .image-preview {
   width: 16%;
 }
-/* line 17, ../sass/partials/_table.sass */
+/* line 20, ../sass/partials/_table.sass */
 table .image-widget .image-widget-data {
   float: right;
   width: 71%;
   margin-right: 1%;
 }
-/* line 21, ../sass/partials/_table.sass */
+/* line 24, ../sass/partials/_table.sass */
 table .image-widget .image-widget-data .file-icon {
   display: none;
 }
-/* line 23, ../sass/partials/_table.sass */
+/* line 26, ../sass/partials/_table.sass */
 table .image-widget .image-widget-data .file, table .image-widget .image-widget-data .file-size {
   padding-bottom: 10px;
   display: inline-block;
 }
-/* line 26, ../sass/partials/_table.sass */
+/* line 29, ../sass/partials/_table.sass */
 table .image-widget .image-widget-data input.form-text {
   margin-bottom: 2px;
 }
-/* line 28, ../sass/partials/_table.sass */
+/* line 31, ../sass/partials/_table.sass */
 table .image-widget .image-widget-data .description {
   margin-bottom: 10px;
 }
 @media only screen and (min-width: 980px) {
-  /* line 31, ../sass/partials/_table.sass */
+  /* line 34, ../sass/partials/_table.sass */
   table .image-widget .image-preview {
     width: 12%;
   }
-  /* line 33, ../sass/partials/_table.sass */
+  /* line 36, ../sass/partials/_table.sass */
   table .image-widget .image-widget-data {
     width: 74%;
   }
 }
 
-/* line 36, ../sass/partials/_table.sass */
+/* line 39, ../sass/partials/_table.sass */
 .sticky-header {
   z-index: 3;
   border: 1px solid #dddddd;
   border-top: 0px;
-  margin-top: 50px;
   top: 0px;
   position: fixed;
 }
 
-/* line 43, ../sass/partials/_table.sass */
-.navbar-horizontal.navbar-tray-open .sticky-header {
-  margin-top: 95px;
+/* line 46, ../sass/partials/_table.sass */
+table.sticky-header {
+  margin-top: 50px !important;
+}
+
+/* line 48, ../sass/partials/_table.sass */
+.navbar-horizontal.navbar-tray-open table.sticky-header {
+  margin-top: 95px !important;
+}
+
+/* line 51, ../sass/partials/_table.sass */
+.form-actions.sticky-header {
+  margin-top: 70px !important;
+}
+
+/* line 53, ../sass/partials/_table.sass */
+.navbar-horizontal.navbar-tray-open .form-actions.sticky-header {
+  margin-top: 115px !important;
+}
+
+/* line 58, ../sass/partials/_table.sass */
+.fpa-table-wrapper .sticky-header th {
+  border-left: 1px solid #dddddd;
 }
 
 /* line 1, ../sass/partials/_ctools.sass */
@@ -12921,15 +12945,6 @@ table .image-widget .image-widget-data .description {
   font-weight: normal;
   box-shadow: none;
   border: none;
-}
-
-/* line 1, ../sass/partials/_ckeditor.sass */
-.cke_editable_themed {
-  color: red;
-}
-/* line 3, ../sass/partials/_ckeditor.sass */
-.cke_editable_themed p {
-  color: green;
 }
 
 /* line 2, ../sass/partials/_media.sass */
